tests/ui/try_transmute.stable.stderr
error[E0277]: the trait bound `util::NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute.rs:16:33
    |
 16 |     let dst_not_try_from_bytes: Result<NotZerocopy, _> = try_transmute!(AU16(0));
    |                                 ^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `util::NotZerocopy`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `util::NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and 153 others
note: required by a bound in `ValidityError`
   --> $WORKSPACE/src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`

error[E0277]: the trait bound `util::NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute.rs:16:58
    |
 16 |     let dst_not_try_from_bytes: Result<NotZerocopy, _> = try_transmute!(AU16(0));
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `util::NotZerocopy`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `util::NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and 153 others
note: required by a bound in `try_transmute`
   --> $WORKSPACE/src/util/macro_util.rs:513:10
    |
510 | pub fn try_transmute<Src, Dst>(src: Src) -> Result<Dst, ValidityError<Src, Dst>>
    |        ------------- required by a bound in this function
...
513 |     Dst: TryFromBytes,
    |          ^^^^^^^^^^^^ required by this bound in `try_transmute`
    = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `util::NotZerocopy: TryFromBytes` is not satisfied
   --> $DIR/try_transmute.rs:16:58
    |
 16 |     let dst_not_try_from_bytes: Result<NotZerocopy, _> = try_transmute!(AU16(0));
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `util::NotZerocopy`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `util::NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and 153 others
note: required by a bound in `ValidityError`
   --> $WORKSPACE/src/error.rs:588:45
    |
588 | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`
    = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `util::NotZerocopy<util::AU16>: IntoBytes` is not satisfied
   --> $DIR/try_transmute.rs:26:47
    |
 26 |     let src_not_into_bytes: Result<AU16, _> = try_transmute!(NotZerocopy(AU16(0)));
    |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `IntoBytes` is not implemented for `util::NotZerocopy<util::AU16>`
   --> $DIR/../include.rs:15:5
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(IntoBytes)]` to `util::NotZerocopy<util::AU16>`
    = help: the following other types implement trait `IntoBytes`:
              ()
              AtomicBool
              AtomicI16
              AtomicI32
              AtomicI64
              AtomicI8
              AtomicIsize
              AtomicU16
            and 68 others
note: required by a bound in `try_transmute`
   --> $WORKSPACE/src/util/macro_util.rs:512:10
    |
510 | pub fn try_transmute<Src, Dst>(src: Src) -> Result<Dst, ValidityError<Src, Dst>>
    |        ------------- required by a bound in this function
511 | where
512 |     Src: IntoBytes,
    |          ^^^^^^^^^ required by this bound in `try_transmute`
    = note: this error originates in the macro `try_transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
